<resources>
    <string name="app_name">阳光生活(演示)</string>

    <!-- ffmpeg 视频拍摄 -->
    <string name="hint">提示</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="action_back">返回</string>
    <string name="action_cancel">取消</string>
    <string name="action_ok">确定</string>
    <string name="version_theme">1.0.0</string>
    <string name="imageview_content_description"></string>
    <string name="record_camera_author">%1$s 作品</string>
    <string name="record_camera_title">拍摄</string>
    <string name="record_camera_back">返回</string>
    <string name="record_camera_next">下一步</string>
    <string name="record_camera_back_delete">回删</string>
    <string name="record_camera_delay">延迟</string>
    <string name="record_camera_filter">滤镜</string>
    <string name="record_camera_init_faild">初始化视频存储路径失败</string>
    <string name="record_camera_progress_message">正在转码…</string>
    <string name="record_camera_check_available_faild">手机满了！至少需要200M存储空间才能继续拍摄！</string>
    <string name="record_camera_open_audio_faild">无法打开录音设备！</string>
    <string name="record_camera_save_faild">视频信息保存失败！</string>
    <string name="record_camera_exit_dialog_message">是否放弃这段视频？</string>
    <string name="delete_onlinemusic_message">是否删除已下载音乐？</string>
    <string name="record_camera_import">导入</string>
    <string name="record_camera_import_image">照片</string>
    <string name="record_camera_import_image_choose">从本地照片选择</string>
    <string name="record_camera_import_image_faild">导入照片失败</string>
    <string name="record_camera_import_video">视频</string>
    <string name="record_camera_import_video_title">截\t取</string>
    <string name="record_camera_import_video_choose">从本地视频选择</string>
    <string name="record_camera_import_video_faild">导入视频失败</string>
    <string name="record_camera_tools_focus">焦点</string>
    <string name="record_camera_tools_led">闪光</string>
    <string name="record_camera_ghost">幽灵</string>
    <string name="record_camera_preview_title">编辑</string>
    <string name="record_camera_preview_pre">拍摄</string>
    <string name="record_camera_preview_next">下一步</string>
    <string name="record_camera_cancel_dialog_yes">确定</string>
    <string name="record_camera_cancel_dialog_no">取消</string>
    <string name="record_video_transcoding_faild">视频转码失败</string>
    <string name="record_video_transcoding_success">视频保存在:%s</string>
    <string name="record_read_object_faild">拍摄信息读取失败！请检查SD卡，稍后重试！</string>
    <string name="record_preview_theme">主题</string>
    <string name="record_preview_title">预览</string>
    <string name="record_preview_theme_original">原始</string>
    <string name="record_preview_theme_load_faild">主题加载失败</string>
    <string name="record_preview_encoding">正在转码…</string>
    <string name="record_preview_encoding_format">转码中\t%d%%</string>
    <string name="record_preview_music_nothing">无</string>
    <string name="record_preview_tab_theme">主题</string>
    <string name="record_preview_tab_filter">滤镜</string>
    <string name="record_preview_building">视频生成中…</string>
    <string name="download_success">下载完成</string>
    <string name="download_error">下载失败</string>
    
    <string name="loading_tips">加载中…</string>
    <string name="nodata">没有数据</string>
    <string name="record_camera_import_video_folder_title">相册</string>
    <string name="dialog_encoding_text">视频处理中...</string>
    <string name="record_camera_import_tips">拖动画面可以调整\n视频的显示位置</string>
    <string name="importVideo_tips_select">左右滑动时间轴，截取你想要的视频片段</string>
    <string name="background_color_textview">背景颜色:</string>
    <string name="nexttip">下一步</string>
    <string name="record_camera_import_title6">裁剪</string>
    <string name="record_camera_import_video_exists">视频不存在</string>
    <string name="record_camera_import_gif_faild">导入Gif失败</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="record_camera_import_type_convert">正在进行格式转换...</string>
    <string name="video_import_duration_too_short">视频太短</string>
    <string name="record_check_available_faild">手机满了！至少需要%sM存储空间才能继续拍摄！</string>
    <string name="video_transcoding_faild">视频转码失败</string>

    <!-- 百度地图 -->
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="diy_call_back">自定义回调</string>
    <string name="diy_call_back_ps">ps:网络定位由于精度低于gps，计算距离会有部分偏差</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
		62 ： 扫描整合定位依据失败。此时定位结果无效。\n
		63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
		65 ： 定位缓存的结果。\n
		66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
		67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
		68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
		161： 表示网络定位结果\n
		162~167： 服务端定位失败\n
		502：key参数错误\n
		505：key不存在或者非法\n
		601：key服务被开发者自己禁用\n
		602：key mcode不匹配\n
		501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈:\n
        邮件格式格式：\n
		1) 手机标识（移动联通IMEI，电信MEID）\n
		2) 问题发生时间；\n
		3）定位类型：失败（给出返回码），或者不准（给出真实位置）等；\n
		4）具体描述：细节描述，可以给出问题发生的频率或者APP名称，sdk版本等，也可以加上附件如日志，贴图等\n
        </string>
    <string name="qa_callback_mail">反馈邮箱:loc-bugs@baidu.com</string>
    
    <!-- icons -->
    <!-- login -->
    <string name="icon_login_user">&#xe63f;</string>
    <string name="icon_login_pwd">&#xe61b;</string>
    <!-- main -->
    <string name="icon_main_examination">&#xe629;</string>
    <string name="icon_main_sign">&#xe617;</string>
    <string name="icon_main_interaction">&#xe60d;</string>
    <string name="icon_main_appforleave">&#xe626;</string>
    <string name="icon_main_education">&#xe609;</string>
    <string name="icon_main_personal">&#xe640;</string>
    <string name="icon_main_notification">&#xe602;</string>
    <!-- physical examination -->
    <string name="icon_examination_title">&#xe68f;</string>
    <!-- sign -->
    <string name="icon_sign_title">&#xe895;</string>
    <string name="icon_sign_history">&#xe603;</string>
    <string name="icon_sign_ok">&#xe671;</string>
    <string name="icon_sign_err">&#xe670;</string>
    <!-- interaction -->
    <string name="icon_interaction_title">&#xe62a;</string>
    <!-- uran -->
    <string name="icon_uran_photo">&#xe641;</string>
    <string name="icon_uran_video">&#xe630;</string>
    <string name="icon_uran_camera1">&#xe62c;</string>
    <string name="icon_uran_camera2">&#xe607;</string>
    <string name="icon_uran_delete">&#xe608;</string>
    <!-- leave -->
    <string name="icon_leave_history">&#xe63b;</string>
    <string name="icon_leave_status1">&#xe6ce;</string> <!-- 已销假 -->
    <string name="icon_leave_status2">&#xe66a;</string> <!-- 审核不通过 -->
    <!-- punlish -->
    <string name="icon_punlish_time">&#xe626;</string>

    <string name="app_name_cn">阳光生活</string>
    <string name="about_us">　　四川科瑞软件有限责任公司成立于2002年，是由四川九洲电器集团有限责任公司控股的高新技术企业，注册资本1500万元，拥有1家独资子公司（北京九州科瑞科技有限公司），专注于软件与电子商务产业，是以自主软件开发和互联网技术为核心的电子商务服务商。</string>

    <!-- 自定义 时间选择器 -->
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>


    <string name="local_notification">本地通知</string>
    <string name="new_local_notification">新建本地通知</string>
    <string name="modify_local_notification">修改本地通知</string>
    <string name="add_local_notification">新建</string>
    <string name="create_local_notification">添加</string>
    <string name="update_local_notification">修改</string>
    <string name="clear_local_notification">清除</string>
    <string name="local_notification_title">标题</string>
    <string name="local_notification_content">内容</string>
    <string name="local_notification_ticker">提示</string>
    <string name="local_notification_datetime">时间</string>
    <string name="local_notification_repeatingnum">重复数</string>
    <string name="local_notification_repeatingunit">重复单位</string>
    <string name="local_notification_repeatinginterval">重复间隔</string>
    <string name="local_notification_specialday">节日</string>
    <!--<string name="year">年</string>-->
    <string name="lunarYear">年(阴历)</string>
    <!--<string name="month">月</string>-->
    <string name="lunarMonth">月(阴历)</string>
    <!--<string name="day">日</string>-->
    <string name="lunarDay">日(阴历)</string>
    <!--<string name="hour">小时</string>-->
    <!--<string name="minute">分钟</string>-->
    <string name="second">秒</string>
    <string name="repeatingNum">重复数</string>
    <string name="repeatingUnit">重复单位</string>
    <string name="repeatingInterval">重复间隔</string>
    <string name="specialDay">节日</string>
    <!--<string name="title">标题</string>-->
    <string name="content">内容</string>
    <string name="ticker">提示</string>
    <string name="flags">Flags</string>
    <string name="defaults">Defaults</string>
    <string name="smallIconDrawable">小图标</string>
    <string name="largeIconDrawable">大图标</string>
    <string name="soundDrawable">声音</string>
    <string name="playVibrate">振动</string>
    <string name="playLights">闪光</string>
    <string name="playSound">声响</string>
    <string name="screenOn">开屏</string>
    <string name="layoutId">自定义样式</string>
    <string name="layoutTitleId">自定义标题</string>
    <string name="layoutContentId">自定义内容</string>
    <string name="layoutIconId">自定义小图标</string>
    <string name="layoutIconDrawableId">自定义大图标</string>
    <string name="notificationSetting">通知设置</string>
    <string name="builderSetting">通知样式设置</string>
    <string name="repeatingNumHint">-1表示一直重复</string>
    <string name="needed">必填</string>
    <string name="search">搜索</string>
    <string name="search_text">根据通知ID或标题内容查找...</string>
    <string name="clearlog">清除日志</string>
    <string name="show_card_message">展示插屏</string>
    <string name="edalias">Tags/Alias/Excusive Alias</string>
    <string name="edaliasType">Alias Type</string>

</resources>
